--- a/src/index.scss
+++ b/src/index.scss
@@ -7,33 +7,40 @@
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
+  --primary-color: #ff4060;
+  --success-color: #42b72a;
+  --success-color-hover: #36a420;
+
+  --primary-bg-color: #f0f2f5;
+  --bg-outline-color: #dddfe2;
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
+// a {
+//   font-weight: 500;
+//   color: #646cff;
+//   text-decoration: inherit;
+// }
+// a:hover {
+//   color: #535bf2;
+// }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  // display: flex;
+  // place-items: center;
+  // min-width: 320px;
   min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
+// h1 {
+//   font-size: 3.2em;
+//   line-height: 1.1;
+// }
 
 button {
   border-radius: 8px;
