--- a/src/styles/LandingPage.scss
+++ b/src/styles/LandingPage.scss
@@ -8,6 +8,28 @@
 
   background-color: var(--primary-bg-color);
 
+  .button--success {
+    background-color: var(--success-color);
+    width: fit-content;
+    align-self: center;
+    color: white;
+    font-weight: bold;
+    font-size: 1.25rem;
+    padding: 20px;
+    margin: 10px;
+    border: 0;
+    border-radius: 10px;
+    cursor: pointer;
+  }
+
+  .button--success:hover {
+    background-color: var(--success-color--hover);
+  }
+
+  .button--success:focus {
+    outline: 0;
+  }
+
   #landing-page__left-section {
     flex: 1;
 
@@ -46,6 +68,7 @@
     a {
       align-self: center;
       color: var(--primary-color);
+      cursor: pointer;
     }
 
     .log-in-button {
@@ -53,6 +76,7 @@
       font-weight: bold;
       color: white;
       font-size: 1.5rem;
+      cursor: pointer;
     }
 
     input {
@@ -67,22 +91,6 @@
       border-bottom: 1px solid var(--bg-outline-color);
     }
 
-    #sign-up__button {
-      background-color: var(--success-color);
-      width: fit-content;
-      align-self: center;
-      color: white;
-      font-weight: bold;
-      border: 0;
-    }
-
-    #sign-up__button:hover {
-      background-color: var(--success-color--hover);
-    }
-
-    #sign-up__button:focus {
-      outline: 0;
-    }
   }
 
   #sign-up__modal {
@@ -102,6 +110,7 @@
     background-color: #fefefe;
     padding: 20px;
     border: 1px solid #888;
+    border-radius: 10px;
     // width: 432px;
 
     position: absolute;
@@ -124,7 +133,7 @@
         font-weight: normal;
       }
     }
-    
+
     #sign-up__modal-content__close-button {
       color: #aaa;
       font-size: 50px;
@@ -134,7 +143,6 @@
       right: 20px;
       top: 0px;
       z-index: 2;
-      
     }
 
     #sign-up-form {
@@ -151,25 +159,86 @@
 
         * {
           flex: 1;
-          
         }
       }
 
-      .sign-up-form__input--gray-theme {
+      .sign-up-form__input {
         font-size: inherit;
         padding: 10px;
         border-radius: 7.5px;
         border: 1px solid #aaa;
-        color: #aaa;
-        background-color: #eeeeee;
       }
 
-      .sign-up-form__input--gray-theme:focus {
+      .sign-up-form__input:focus {
         outline: none;
       }
 
+      .sign-up-form__input--gray-theme {
+        color: #aaa;
+        background-color: #eeeeee;
+      }
+      
+      .sign-up-form__input--default-theme {
+        color: black;
+        background-color: #ffffff;
+      }
+
+      .radio-input {
+        position: relative;
+
+        input {
+          position: absolute;
+          height: 36px;
+          right: 10px;
+          top: 0;
+        }
+      }
     }
   }
+}
+
+@media (max-width: 900px) {
+  #landing-page {
+    flex-direction: column;
+    padding: 50px 5vw;
+    overflow: auto;
+
+    .button--success {
+      font-size: 1rem;
+    }
+
+    #landing-page__left-section {
+
+      h1 {
+        font-size: 3rem;
+        
+      }
+
+      h2 {
+        font-size: 1.5rem;
+      }
+    }
+
+    #landing-page__right-section {
+      font-size: 1rem;
+
+      .log-in-button {
+        font-size: 1rem;
+      }
+    }
 
 
+    #sign-up__modal-content {
+      height: 80vh;
+      overflow: auto;
+
+      #sign-up-form {
+
+        .sign-up-form__multiple-input-row {
+          flex-direction: column;
+          row-gap: 10px;
+        }
+      }
+    }
+  }
 }
