bug: change indexing on sign-up date of birth
The value for month should start at 0 because JavaScript new Date()
constructor begins the index for month at 0.

--- a/src/styles/LandingPage.scss
+++ b/src/styles/LandingPage.scss
@@ -174,7 +174,6 @@
       }
 
       .sign-up-form__input--gray-theme {
-        color: #aaa;
         background-color: #eeeeee;
       }
       
@@ -185,6 +184,11 @@
 
       .radio-input {
         position: relative;
+        display: flex;
+
+        label {
+          flex: 1;
+        }
 
         input {
           position: absolute;
