--- a/src/styles/LandingPage.scss
+++ b/src/styles/LandingPage.scss
@@ -59,10 +59,15 @@
 
     font-size: 1.25rem;
 
-    #login-form {
+    #log-in-form {
       display: flex;
       flex-direction: column;
       row-gap: inherit;
+
+      input:focus {
+        outline: none;
+      }
+
     }
 
     a {
